--- a/CustomI.Sample.CustomUserManagement/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CustomI.Sample.CustomUserManagement/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,10 +8,15 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.FullName" class="form-control" autocomplete="FullName" aria-required="true" placeholder="Full name" />
+                <label asp-for="Input.FullName">Full Name</label>
+                <span asp-validation-for="Input.FullName" class="text-danger"></span>
+            </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
@@ -26,6 +31,19 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="col-md-6">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Input.Picture" style="width:100%;"></label>
+                    <img id="imgPicture" style="width:350px;height:350px; object-fit:cover" src="" />
+                    <input type="file"
+                           accept=".png,.jpg,.jpeg"
+                           asp-for="Input.Picture" class="form-control"
+                           style="border:0px!important;padding:0px;padding-top:10px;padding-bottom:30px;"
+                           onchange="document.getElementById('imgPicture').src = window.URL.createObjectURL(this.files[0])" />
+                    <span asp-validation-for="Input.Picture" class="text-danger"></span>
+                </div>
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
