--- a/NorthwindMVC/Views/Category/Details.cshtml
+++ b/NorthwindMVC/Views/Category/Details.cshtml
@@ -1,5 +1,16 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Northwind.EntityModels.Category
+
 @{
+    ViewData["Title"] = "Category Details";
+}
+
+<h1>@Model.CategoryName</h1>
+
+@if (!string.IsNullOrEmpty(Model.Description))
+{
+    <p>@Model.Description</p>
+}
+else
+{
+    <p>Beskrivning saknas</p>
 }
