--- a/NorthwindMVC/Views/Category/Details.cshtml
+++ b/NorthwindMVC/Views/Category/Details.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/Details.css" />
 </head>
 
-<div class="container">
+<div class="category-container">
 <h1>@Model.CategoryName</h1>
 
 
